# ocp_qp_benchmark

./: .gitignore  .gitmodules  README.md  add_problems.py  bench_set_manager.py  generate_simple_QP.py  main_ocp.py  plot_metric_ocp.py  pyproject.toml  results_ocp.py  run_ocp.py  solver_set_ocp.py  test_set_ocp.py  utils.py
.github/actions/setup-acados/: action.yml
.github/workflows/: benchmark.yml
src/ocp_qp_benchmark/: __init__.py
src/ocp_qp_benchmark/cli/: add_problems.py  main.py
src/ocp_qp_benchmark/core/: __init__.py  result.py  result_logger.py  results.py  runner.py  solver_set.py  supported_solvers.py  test_set.py
src/ocp_qp_benchmark/dataset/: __init__.py  converters.py  generators.py  manager.py
src/ocp_qp_benchmark/utils/: __init__.py  io.py
src/ocp_qp_benchmark/visualization/: __init__.py  plotting.py
tests/: __init__.py  benchmark.json  test_solver_set.py
